--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,9 @@
 <div>
-    <h1>Welcome to hell HAHAHA</h1>
+    <header>
+        <h1>Expense tracker</h1>
+        <h3>Get your shit together</h3>
+    </header>
+    <h1>Welcome</h1>
+    <a href="/signup">Sign up</a>
+    <a href="/signin">Sign in</a>
 </div>
