--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -2,7 +2,7 @@
     <label for="user-email">Email</label>
     <input type="email" name="email" id="user-email" placeholder="marsh">
     <label for="user-pass">Password</label>
-    <input type="password" name="password" id="user-pass" placeholder="We know it's your mom's name">
+    <input type="password" name="password" id="user-pass" placeholder="We know it's 1234">
     <button type="submit">Sign In</button>
 </form>
 
