link models fixes #24

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,7 @@
 <div>
     <h1>Welcome to home page</h1>
     <h2>list of transactions</h2>
+
+
+    <a href="/createTrans">Create transaction</a>
 </div>
