--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,24 +1,27 @@
+<link rel="stylesheet" href="/stylesheets/style.css">
 <div>
     <h1>Welcome to home page</h1>
     <h2>list of transactions</h2>
-
     <div>
-        {{#each newTrans}}
-        {{!-- {{#if  this.isExpenseType}} --}}
-            <div class="red-bg">
-                <p>{{this.name}}</p>
-                <small>{{this.date}}</small>
-                <p>{{this.amount}}</p>
-            </div>
-        {{!-- {{else}}
-             <div class="blue-bg">
-                <p>{{this.name}}</p>
-                <small>{{this.date}}</small>
-                <p>{{this.amount}}</p>
-            </div> --}}
-        {{!-- {{/if}} --}}
+        <a href="/createTrans">Create transaction</a>
+        {{#each reverseTrans}}
+        {{#if this.isExpenseType}}
+        <div class="red-bg">
+            <p>{{this.name}}</p>
+            <small>{{this.date}}</small>
+            <p>{{this.amount}} €</p>
+            <a href="/editTrans/{{this._id}}">Edit</a>
+            <a href="/home/delete/{{this._id}}">Delete</a>
+        </div>
+        {{else}}
+        <div class="blue-bg">
+            <p>{{this.name}}</p>
+            <small>{{this.date}}</small>
+            <p>{{this.amount}}</p>
+            <a href="/editTrans/{{this._id}}">Edit</a>
+            <a href="/home/delete/{{this._id}}">Delete</a>
+        </div>
+        {{/if}}
         {{/each}}
     </div>
-
-    <a href="/createTrans">Create transaction</a>
 </div>
