--- a/views/editTrans.hbs
+++ b/views/editTrans.hbs
@@ -1,4 +1,6 @@
 <div>
+        <a href="/logout">Logout</a>
+
     <h1>Edit transaction</h1>
     <form action="/editTrans/{{transaction.id}}" method="POST">
         <label for="type">Type:</label>
