--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,6 +2,9 @@
 <div>
     <h1>Welcome to home page</h1>
     <h2>list of transactions</h2>
+    <a href="/logout">Logout</a>
+
+    <p>{{reduceTrans}} €</p>
     <div>
         <a href="/createTrans">Create transaction</a>
         {{#each reverseTrans}}
