--- a/views/createTrans.hbs
+++ b/views/createTrans.hbs
@@ -1,4 +1,6 @@
 <div>
+        <a href="/logout">Logout</a>
+
     <h1>Create transaction</h1>
     <form action="/createTrans" method="POST">
         <label for="type">Type:</label> 
