insert user greeting fixes #27

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,7 +3,7 @@
     <h1>Welcome to home page</h1>
     <h2>list of transactions</h2>
     <a href="/logout">Logout</a>
-
+    <h3>Hello {{userData.username}}</h3>
     <p>{{reduceTrans}} €</p>
     <div>
         <a href="/createTrans">Create transaction</a>
