add currency to signup and current balance fixes #12

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -4,12 +4,16 @@
     <label for="user-email">Email</label>
     <input type="email" name="email" id="user-email" placeholder="iamlorde@yahoo.com">
     <label for="user-pass">Password</label>
-    {{!-- <input type="currency" name="email" id="user-email" placeholder="iamlorde@yahoo.com">
-   <select name="currency" id=""> <option value=""> --}}
-    {{!-- 
-    </option>
-    </select> --}}
     <input type="password" name="password" id="user-pass" placeholder="*******">
+    <label for="currency" >Currency</label>
+    <select name="currency" id="currency" placeholder="Select currency">
+        <option value="€">EURO €</option>
+        <option value="£">GBP £</option>
+        <option value="$">USD $</option>
+        <option value="¥">YEN ¥</option>
+        <option value="CHF">CHF</option>
+        <option value="₹">INR ₹</option>
+    </select>
     <button type="submit">Sign Up</button>
 </form>
 
