--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -7,12 +7,12 @@
     <input type="password" name="password" id="user-pass" placeholder="*******">
     <label for="currency" >Currency</label>
     <select name="currency" id="currency" placeholder="Select currency">
-        <option value="€">EURO €</option>
-        <option value="£">GBP £</option>
-        <option value="$">USD $</option>
-        <option value="¥">YEN ¥</option>
+        <option value="EUR">EUR €</option>
+        <option value="GBP">GBP £</option>
+        <option value="USD">USD $</option>
+        <option value="YEN">YEN ¥</option>
         <option value="CHF">CHF</option>
-        <option value="₹">INR ₹</option>
+        <option value="INR">INR ₹</option>
     </select>
     <button type="submit">Sign Up</button>
 </form>
