--- a/views/diagrams.hbs
+++ b/views/diagrams.hbs
@@ -1,4 +1,19 @@
-<div>HELLO PIE CHARTS AND STUFF</div>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+
+</head>
+
+<body>
+    <div>HELLO PIE CHARTS AND STUFF</div>
     <a href="/logout">Logout</a>
 
+    <canvas id="pieChart" style="display: block; height: 179px; width: 358px;" width="300" height="100" ></canvas>
+   
+    <script src="/javascripts/diagram.js"></script>
+</body>
 
+</html>
