--- a/views/createTrans.hbs
+++ b/views/createTrans.hbs
@@ -24,11 +24,11 @@
             <option value="healthcare">Healthcare</option>
         </select>
         <label for="amount">Amount:</label>
-        <input type="number" name="amount" id="amount">
+        <input type="number" step="0.01" name="amount" id="amount">
         <label for="date">Date:</label>
-        <input type="date" name="date" id="date">
+        <input type="date" name="date" id="date" required pattern="dd-mm-yyyy">
         <button type="submit">Add transaction</button>
-         <button type="reset">Reset transaction</button>
+        <button type="reset">Reset transaction</button>
     </form>
 
 {{#if showErrorMessage}}
