--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,10 +1,53 @@
-<link rel="stylesheet" href="/stylesheets/style.css">
-<div>
-    <h3>Hello {{userData.username}}</h3>
-    <a href="/logout">Logout</a>
-   {{!-- Current balance --}}
-    <p>{{reduceTrans}} {{userData.currency}}</p>
-     <h4>list of transactions</h4>
+{{!-- Bootstrap --}}
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+{{!-- Font Awesome Icons --}}
+<script src="https://kit.fontawesome.com/a337f7a40e.js" crossorigin="anonymous"></script>
+
+
+<div></div>
+    <h3>Hello {{upperCaseName}}</h3>
+    <a href="/logout"><i class="fas fa-sign-out-alt fontawesome"></i></a>
+
+    {{!-- Current balance --}}
+    <h2>{{currency}}</h2>
+
+    {{!-- Filter --}}
+    <div class="row align-items-center justify-content-center">
+        <div class="flex-position">
+            <form action="/home" method="GET" class="flex-position">
+                <select id="inputType" class="form-control" name="type">
+                    <option>Type</option>
+                    <option value="income">Income</option>
+                    <option value="expense">Expense</option>
+                </select>
+                <select id="inputCategory" class="form-control" name="category">
+                    <option>Select category</option>
+                    <option value="food">Food</option>
+                    <option value="transport">Transport</option>
+                    <option value="accommodation">Accommodation</option>
+                    <option value="salary">Salary</option>
+                    <option value="travel">Travel</option>
+                    <option value="bills">Bills</option>
+                    <option value="entertainment">Entertainment</option>
+                    <option value="clothing">Clothing</option>
+                    <option value="education">Education</option>
+                    <option value="healthcare">Healthcare</option>
+                </select>
+                <input type="date" class="form-control">
+                <button type="submit" class="btn btn-primary btn-block">Search</button>
+            </form>
+
+            <form action="/home" method="GET">
+                <button type="submit" class="btn btn-primary btn-block">Reset</button>
+            </form>
+        </div>
+
+    </div>
+
+
+    {{!-- Transactions--}}
+    <h4>list of transactions</h4>
     <div>
         <a href="/createTrans">Create transaction</a>
         {{#each reverseTrans}}
@@ -27,4 +70,21 @@
         {{/if}}
         {{/each}}
     </div>
+
+    {{!-- Navigation bar --}}
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed">
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/home"><i class="fas fa-home fontawesome"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/diagrams"><i class="fas fa-chart-pie fontawesome"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </div>
