--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,3 +1,25 @@
-<div>
-    <h1>{{{body}}}</h1>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Expense Tracker</title>
+    {{!-- Bootstrap --}}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    {{!-- Font Awesome Icons --}}
+    <script src="https://kit.fontawesome.com/a337f7a40e.js" crossorigin="anonymous"></script>
+    {{!-- CSS Stylesheet --}}
+    <link rel="stylesheet" href="/stylesheets/style.css">
+</head>
+
+<body>
+    <header class="header">
+
+    </header>
+    <div>
+        {{{body}}}
+    </div>
+</body>
+</html>
