--- a/views/home.hbs
+++ b/views/home.hbs
@@ -6,85 +6,107 @@
 
 
 <div></div>
-    <h3>Hello {{upperCaseName}}</h3>
-    <a href="/logout"><i class="fas fa-sign-out-alt fontawesome"></i></a>
+<h3>Hello {{upperCaseName}}</h3>
+<a href="/logout"><i class="fas fa-sign-out-alt fontawesome"></i></a>
 
-    {{!-- Current balance --}}
-    <h2>{{currency}}</h2>
+{{!-- Current balance --}}
+<h2>{{currency}}</h2>
 
-    {{!-- Filter --}}
-    <div class="row align-items-center justify-content-center">
-        <div class="flex-position">
-            <form action="/home" method="GET" class="flex-position">
-                <select id="inputType" class="form-control" name="type">
-                    <option>Type</option>
-                    <option value="income">Income</option>
-                    <option value="expense">Expense</option>
-                </select>
-                <select id="inputCategory" class="form-control" name="category">
-                    <option>Select category</option>
-                    <option value="food">Food</option>
-                    <option value="transport">Transport</option>
-                    <option value="accommodation">Accommodation</option>
-                    <option value="salary">Salary</option>
-                    <option value="travel">Travel</option>
-                    <option value="bills">Bills</option>
-                    <option value="entertainment">Entertainment</option>
-                    <option value="clothing">Clothing</option>
-                    <option value="education">Education</option>
-                    <option value="healthcare">Healthcare</option>
-                </select>
-                <input type="date" class="form-control">
-                <button type="submit" class="btn btn-primary btn-block">Search</button>
-            </form>
+{{!-- Filter --}}
+<div class="row align-items-center justify-content-center">
+    <div class="flex-position">
+        <form action="/home" method="GET" class="flex-position">
+            <select id="inputType" class="form-control" name="type">
+                <option>Type</option>
+                <option value="income">Income</option>
+                <option value="expense">Expense</option>
+            </select>
+            <select id="inputCategory" class="form-control" name="category">
+                <option>Select category</option>
+                <option value="food">Food</option>
+                <option value="transport">Transport</option>
+                <option value="accommodation">Accommodation</option>
+                <option value="salary">Salary</option>
+                <option value="travel">Travel</option>
+                <option value="bills">Bills</option>
+                <option value="entertainment">Entertainment</option>
+                <option value="clothing">Clothing</option>
+                <option value="education">Education</option>
+                <option value="healthcare">Healthcare</option>
+            </select>
+            <input type="date" class="form-control">
+            <button type="submit" class="btn btn-primary btn-block">Search</button>
+        </form>
 
-            <form action="/home" method="GET">
-                <button type="submit" class="btn btn-primary btn-block">Reset</button>
-            </form>
-        </div>
-
+        <form action="/home" method="GET">
+            <button type="submit" class="btn btn-primary btn-block">Reset</button>
+        </form>
     </div>
 
+</div>
 
-    {{!-- Transactions--}}
-    <h4>list of transactions</h4>
-    <div>
-        <a href="/createTrans">Create transaction</a>
-        {{#each reverseTrans}}
-        {{#if this.isExpenseType}}
-        <div class="red-bg">
-            <p>{{this.name}}</p>
-            <small>{{this.date}}</small>
-            <p>{{this.amount}}</p>
-            <a href="/editTrans/{{this._id}}">Edit</a>
-            <a href="/home/delete/{{this._id}}">Delete</a>
+
+{{!-- Transactions--}}
+<h4>list of transactions</h4>
+<div>
+    {{#each reverseTrans}}
+    {{#if this.isExpenseType}}
+    <div class="col-10">
+        <div class="center">
+            <div class="red-bg row">
+                <div class="col-6">
+                    <p>{{this.name}}</p>
+                    <small>{{this.date}}</small>
+                </div>
+                <div class="col-3">
+                    <a href="/editTrans/{{this._id}}"><i class="fas fa-edit"></i></a>
+                    <a href="/home/delete/{{this._id}}"><i class="fas fa-trash-alt"></i></a>
+                </div>
+                <div class="col-3">
+                    <p>{{this.amount}}</p>
+                </div>
+            </div>
         </div>
+
         {{else}}
-        <div class="blue-bg">
-            <p>{{this.name}}</p>
-            <small>{{this.date}}</small>
-            <p>{{this.amount}}</p>
-            <a href="/editTrans/{{this._id}}">Edit</a>
-            <a href="/home/delete/{{this._id}}">Delete</a>
+        <div class="center">
+            <div class="blue-bg row">
+                <div class="col-6">
+                    <p>{{this.name}}</p>
+                    <small>{{this.date}}</small>
+                </div>
+                <div class="col-3">
+                    <a href="/editTrans/{{this._id}}"><i class="fas fa-edit"></i></a>
+                    <a href="/home/delete/{{this._id}}"><i class="fas fa-trash-alt"></i></a>
+                </div>
+                <div class="col-3">
+                    <p>{{this.amount}}</p>
+                </div>
+            </div>
         </div>
         {{/if}}
         {{/each}}
     </div>
+    <div class="create-btn col-2">
+        <a href="/createTrans"><i class="fas fa-plus-circle"></i></a>
+    </div>
 
-    {{!-- Navigation bar --}}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed">
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/home"><i class="fas fa-home fontawesome"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/diagrams"><i class="fas fa-chart-pie fontawesome"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"></a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+</div>
+
+{{!-- Navigation bar --}}
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed">
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="/home"><i class="fas fa-home fontawesome"></i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/diagrams"><i class="fas fa-chart-pie fontawesome"></i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#"></a>
+            </li>
+        </ul>
+    </div>
+</nav>
 </div>
