--- a/views/diagrams.hbs
+++ b/views/diagrams.hbs
@@ -1,4 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+
+</body>
+
+</html>
+
 <div>HELLO PIE CHARTS AND STUFF</div>
-    <a href="/logout">Logout</a>
+<a href="/logout">Logout</a>
 
-
+<canvas id="myChart"></canvas>
+<canvas id="otherChart"></canvas>
