--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,3 +1,17 @@
-<div>
-    <h1>{{{body}}}</h1>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <div>
+        <h1>{{{body}}}</h1>
+    </div>
+
+</body>
+
+</html>
