--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,23 +1,31 @@
 {{!-- Bootstrap --}}
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+{{!-- Google Fonts --}}
+<link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;700;800&display=swap"
+    rel="stylesheet">
 {{!-- Font Awesome Icons --}}
 <script src="https://kit.fontawesome.com/a337f7a40e.js" crossorigin="anonymous"></script>
 
 
-<div></div>
-<h3>Hello {{upperCaseName}}</h3>
-<a href="/logout"><i class="fas fa-sign-out-alt fontawesome"></i></a>
+<div class="intro">
+    <h3 class="user-greeting">Hello {{upperCaseName}}</h3>
+    <a href="/logout" class="logout-btn"><i class="fas fa-sign-out-alt fa-2x fontawesome"></i></a>
+</div>
+
 
 {{!-- Current balance --}}
-<h2>{{currency}}</h2>
+<div class="current-balance">
+    <h2>{{currency}}</h2>
+    <small>Current balance</small>
+</div>
+
 
 {{!-- Filter --}}
-<div class="row align-items-center justify-content-center">
-    <div class="flex-position">
-        <form action="/home" method="GET" class="flex-position">
+
+        <form action="/home" method="GET">
             <select id="inputType" class="form-control" name="type">
-                <option>Type</option>
+                <option>Select type</option>
                 <option value="income">Income</option>
                 <option value="expense">Expense</option>
             </select>
@@ -34,24 +42,21 @@
                 <option value="education">Education</option>
                 <option value="healthcare">Healthcare</option>
             </select>
-            <input type="date" class="form-control">
+            {{!-- <input type="date" class="form-control"> --}}
             <button type="submit" class="btn btn-primary btn-block">Search</button>
         </form>
 
         <form action="/home" method="GET">
             <button type="submit" class="btn btn-primary btn-block">Reset</button>
         </form>
-    </div>
-
-</div>
 
 
 {{!-- Transactions--}}
-<h4>list of transactions</h4>
+<h4 class="trans-title">Earlier this month</h4>
 <div>
     {{#each reverseTrans}}
     {{#if this.isExpenseType}}
-    <div class="col-10">
+    <div class="trans-display">
         <div class="center">
             <div class="red-bg row">
                 <div class="col-6">
@@ -59,11 +64,11 @@
                     <small>{{this.date}}</small>
                 </div>
                 <div class="col-3">
-                    <a href="/editTrans/{{this._id}}"><i class="fas fa-edit"></i></a>
-                    <a href="/home/delete/{{this._id}}"><i class="fas fa-trash-alt"></i></a>
+                    <a href="/editTrans/{{this._id}}"><i class="fas fa-edit fontawesome"></i></a>
+                    <a href="/home/delete/{{this._id}}"><i class="fas fa-trash-alt fontawesome"></i></a>
                 </div>
-                <div class="col-3">
-                    <p>{{this.amount}}</p>
+                <div class="col-3 card-amount">
+                    <p>- {{this.amount}}</p>
                 </div>
             </div>
         </div>
@@ -76,37 +81,40 @@
                     <small>{{this.date}}</small>
                 </div>
                 <div class="col-3">
-                    <a href="/editTrans/{{this._id}}"><i class="fas fa-edit"></i></a>
-                    <a href="/home/delete/{{this._id}}"><i class="fas fa-trash-alt"></i></a>
+                    <a href="/editTrans/{{this._id}}"><i class="fas fa-edit fontawesome"></i></a>
+                    <a href="/home/delete/{{this._id}}"><i class="fas fa-trash-alt fontawesome"></i></a>
                 </div>
-                <div class="col-3">
-                    <p>{{this.amount}}</p>
+                <div class="col-3 card-amount">
+                    <p>+ {{this.amount}}</p>
                 </div>
             </div>
         </div>
         {{/if}}
         {{/each}}
     </div>
-    <div class="create-btn col-2">
-        <a href="/createTrans"><i class="fas fa-plus-circle"></i></a>
-    </div>
+    {{!-- <div class="create-btn col-2">
+        <a href="/createTrans"><i class="fas fa-plus-circle fa-3x fontawesome"></i></a>
+    </div> --}}
 
 </div>
 
 {{!-- Navigation bar --}}
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed">
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="/home"><i class="fas fa-home fontawesome"></i></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/diagrams"><i class="fas fa-chart-pie fontawesome"></i></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#"></a>
-            </li>
-        </ul>
-    </div>
-</nav>
+<div class="navigation-bar">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/home"><i class="fas fa-home fontawesome fa-2x"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/createTrans"><i class="fas fa-plus-circle fa-2x fontawesome"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/diagrams"><i class="fas fa-chart-pie fontawesome fa-2x"></i></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
+
 </div>
