--- a/views/diagrams.hbs
+++ b/views/diagrams.hbs
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-    <div>HELLO PIE CHARTS AND STUFF</div>
-    <a href="/logout">Logout</a>
+    <div class="diagram-page">
+        <a href="/logout" class="logout-btn"><i class="fas fa-sign-out-alt fa-2x fa-logout"></i></a>
+        <canvas id="pieChart" style="display: block; height: 179px; width: 358px;" width="300" height="85"></canvas>
+    </div>
 
-    <canvas id="pieChart" style="display: block; height: 179px; width: 358px;" width="300" height="100" ></canvas>
-   
     <script src="/javascripts/diagram.js"></script>
 </body>
 
