--- a/views/createTrans.hbs
+++ b/views/createTrans.hbs
@@ -1,52 +1,56 @@
-
-    <a href="/logout" class="logout-btn"><i class="fas fa-sign-out-alt fa-2x fa-logout"></i></a>
-
-    <div class="container">
-        <h1>Create transaction</h1>
-
-        <form action="/createTrans" method="POST">
-            <div class="form-group">
-                <label for="type">Type</label>
-                <select name="type" id="type">
-                    <option value="income">Income</option>
-                    <option value="expense">Expense</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" name="name" id="name">
-            </div>
-            <div class="form-group">
-                <label for="category">Category</label>
-                <select multiple class="form-control" id="category" name="category">
-                    <option value="food">Food</option>
-                    <option value="transport">Transport</option>
-                    <option value="accommodation">Accommodation</option>
-                    <option value="salary">Salary</option>
-                    <option value="travel">Travel</option>
-                    <option value="bills">Bills</option>
-                    <option value="entertainment">Entertainment</option>
-                    <option value="clothing">Clothing</option>
-                    <option value="education">Education</option>
-                    <option value="healthcare">Healthcare</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="amount">Amount:</label>
-                <input type="number" step="0.01" name="amount" id="amount">
-            </div>
-            <div class="form-group">
-                <label for="date">Date:</label>
-                <input type="date" name="date" id="date" required pattern="dd-mm-yyyy">
-            </div>
-            <div>
-                <button type="submit" class="btn btn-info">Add transaction</button>
-                <button type="reset" class="btn btn-info">Reset transaction</button>
-            </div>
-        </form>
+<div class="container">
+    <div class="intro">
+        <h2 class="create-title">Create transaction</h2>
+        <a href="/logout" class="logout-btn"><i class="fas fa-sign-out-alt fa-2x fa-logout"></i></a>
     </div>
 
 
+    <form action="/createTrans" method="POST">
+        <div class="form-group">
+            {{!-- <label for="type">Type:</label> --}}
+            <select name="type" id="type" class="create-form-item" required> 
+                <option value="" disabled selected hidden>Select type</option>
+                <option value="income">Income</option>
+                <option value="expense">Expense</option>
+            </select>
+            <div class="create-name">
+                {{!-- <label for="name">Name:</label> --}}
+                <input type="text" name="name" id="name" class="create-form-item" placeholder="Name">
+            </div>
+        </div>
+        <div class="form-group">
+            {{!-- <label for="category">Category:</label> --}}
+            <select class="create-form-item" id="category" name="category">
+                <option value="" disabled selected hidden>Select category</option>
+                <option value="food">Food</option>
+                <option value="transport">Transport</option>
+                <option value="accommodation">Accommodation</option>
+                <option value="salary">Salary</option>
+                <option value="travel">Travel</option>
+                <option value="bills">Bills</option>
+                <option value="entertainment">Entertainment</option>
+                <option value="clothing">Clothing</option>
+                <option value="education">Education</option>
+                <option value="healthcare">Healthcare</option>
+                <option value="healthcare">Other</option>
+            </select>
+        </div>
+        <div class="form-group">
+            {{!-- <label for="amount">Amount:</label> --}}
+            <input type="number" step="0.01" name="amount" id="amount" class="create-form-item" placeholder="Amount">
+        </div>
+        <div class="form-group">
+            {{!-- <label for="date">Date:</label> --}}
+            <input type="date" name="date" id="date" required pattern="dd-mm-yyyy" class="create-form-item">
+        </div>
+        <div>
+            <button type="submit" class="btn btn-info">Add transaction</button>
+            <button type="reset" class="btn btn-info">Reset transaction</button>
+        </div>
+    </form>
+</div>
+
+
 {{#if showErrorMessage}}
-    <p>Something went wrong. Transaction not created.</p>
+<p>Something went wrong. Transaction not created.</p>
 {{/if}}
