--- a/views/editTrans.hbs
+++ b/views/editTrans.hbs
@@ -1,32 +1,50 @@
-<div>
-        <a href="/logout">Logout</a>
+<div class="container">
+    <div class="intro">
+        <h2 class="create-title">Edit transaction</h2>
+        <a href="/logout" class="logout-btn"><i class="fas fa-sign-out-alt fa-2x fa-logout"></i></a>
+    </div>
 
-    <h1>Edit transaction</h1>
     <form action="/editTrans/{{transaction.id}}" method="POST">
-        <label for="type">Type:</label>
-        <select name="type" id="type" placeholder='Select type' value="{{transaction.type}}">
-            <option value="income">Income</option>
-            <option value="expense">Expense</option>
-        </select>
-        <label for="name">Name:</label>
-        <input type="text" name="name" id="name" value="{{transaction.name}}">
-        <label for="category">Category</label>
-        <select name="category" id="category" placeholder="select category" value="{{transaction.category}}">
-            <option value="food">Food</option>
-            <option value="transport">Transport</option>
-            <option value="accommodation">Accommodation</option>
-            <option value="salary">Salary</option>
-            <option value="travel">Travel</option>
-            <option value="bills">Bills</option>
-            <option value="entertainment">Entertainment</option>
-            <option value="clothing">Clothing</option>
-            <option value="education">Education</option>
-            <option value="healthcare">Healthcare</option>
-        </select>
-        <label for="amount">Amount:</label>
-        <input type="number" name="amount" id="amount" value="{{transaction.amount}}">
-        <label for="date">Date:</label>
-        <input type="date" name="date" id="date" value="{{transaction.date}}">
-        <button type="submit">Edit transaction</button>
+        <div class="form-group">
+            {{!-- <label for="type">Type:</label> --}}
+            <select name="type" id="type" class="create-form-item" required>
+                {{#each transactionTypes}}
+                <option value="{{this.type}}" {{this.selected}}>{{this.name}}</option>
+                {{/each}}
+            </select>
+            <div class="create-name">
+                {{!-- <label for="name">Name:</label> --}}
+                <input type="text" name="name" id="name" value="{{transaction.name}}" class="create-form-item">
+            </div>
+        </div>
+        <div class="form-group">
+            {{!-- <label for="category">Category:</label> --}}
+            <select class="create-form-item" id="category" name="category">
+                <option value="food">Food</option>
+                <option value="transport">Transport</option>
+                <option value="accommodation">Accommodation</option>
+                <option value="salary">Salary</option>
+                <option value="travel">Travel</option>
+                <option value="bills">Bills</option>
+                <option value="entertainment">Entertainment</option>
+                <option value="clothing">Clothing</option>
+                <option value="education">Education</option>
+                <option value="healthcare">Healthcare</option>
+                <option value="healthcare">Other</option>
+            </select>
+        </div>
+        <div class="form-group">
+            {{!-- <label for="amount">Amount:</label> --}}
+            <input type="number" step="0.01" name="amount" id="amount" value="{{transaction.amount}}"
+                class="create-form-item">
+        </div>
+        <div class="form-group">
+            {{!-- <label for="date">Date:</label> --}}
+            <input type="date" name="date" id="date" required pattern="dd-mm-yyyy" value="{{transaction.date}}"
+                class="create-form-item">
+        </div>
+        <div>
+            <button type="submit" class="btn btn-info">Edit transaction</button>
+        </div>
     </form>
 </div>
