--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     {{!-- Google Fonts --}}
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;700;800&display=swap"
+        rel="stylesheet">
     {{!-- Font Awesome Icons --}}
     <script src="https://kit.fontawesome.com/a337f7a40e.js" crossorigin="anonymous"></script>
     {{!-- CSS Stylesheet --}}
@@ -17,29 +18,30 @@
 </head>
 
 <body>
-    <header class="header">
-        <h2>Show me the money</h2>
-    </header>
-    
-             {{{body}}}
-  
     {{!-- Navigation bar --}}
-<div class="navigation-bar fixed-bottom">
-    <nav class="navbar navbar-expand-lg navbar-bg">
-        <div class="collapse navbar-collapse navbar-items-position" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/home"><i class="fas fa-home fa-2x fa-nav-home"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/createTrans"><i class="fas fa-plus-circle fa-2x fa-nav-create"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/diagrams"><i class="fas fa-chart-pie fa-2x fa-nav-diagram"></i></a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
+    <div class="navigation-bar sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-bg">
+            <div class="collapse navbar-collapse navbar-items-position" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/home"><i class="fas fa-home fa-2x fa-nav-home"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/createTrans"><i
+                                class="fas fa-plus-circle fa-2x fa-nav-create"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/diagrams"><i class="fas fa-chart-pie fa-2x fa-nav-diagram"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+
+    {{{body}}}
+
+    <footer>
+        <p>&copy; &#36;how-Me-the-Money-Team 2020</p>
+    </footer>
 </body>
 </html>
