remove sticky from intro on home page

--- a/views/diagrams.hbs
+++ b/views/diagrams.hbs
@@ -10,7 +10,7 @@
 <body>
     <div class="diagram-page container">
         <div class="intro">
-            <h2>Pie chart</h2>
+            <h2>Statistics</h2>
             <a href="/logout" class="logout-btn"><i class="fas fa-sign-out-alt fa-2x fa-logout"></i></a>
         </div>
 
