--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="intro sticky-top">
+    <div class="intro">
         <h3 class="user-greeting">Hello {{upperCaseName}}</h3>
         <a href="/logout"><i class="fas fa-sign-out-alt fa-2x fa-logout"></i></a>
     </div>
