--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,15 @@
 <div>
-    <header>
-        <h1>Expense tracker</h1>
-        <h3>Get your shit together</h3>
+    <header class="header">
+        <h1>Show me the money</h1>
+        <h4 class="h4-landing">Expense tracker to analyse your budget and get your shit together</h4>
+        <div class='gif-landing'><img src="https://media.giphy.com/media/9HQRIttS5C4Za/giphy.gif"
+                alt="Too bad, can't see Tom Cruise GIF"></div>
     </header>
-    <h1>Welcome</h1>
-    <a href="/signup">Sign up</a>
-    <a href="/signin">Sign in</a>
+
+    <div class="landing-container">
+
+        <a href="/signup"><button type="button" class="btn btn-primary btn-lg">Sign up</button></a>
+        <a href="/signin"><button type="button" class="btn btn-secondary btn-lg">Sign in</button></a>
+    </div>
+</div>
 </div>
